--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "test": "jest"
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
@@ -18,11 +15,25 @@
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/enzyme": "^3.9.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/expo": "^32.0.9",
     "@types/expo__vector-icons": "^9.0.1",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.12",
     "@types/react-native": "^0.57.42",
+    "@types/react-navigation": "^3.0.6",
+    "@types/react-test-renderer": "^16.8.1",
     "babel-preset-expo": "^5.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "^24.7.1",
     "jest-expo": "^32.0.0",
+    "moment": "^2.24.0",
+    "react-test-renderer": "^16.8.6",
     "typescript": "^3.4.1"
   },
   "private": true
