--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@types/react-mixin": "^2.0.32",
     "expo": "^32.0.0",
     "react": "16.5.0",
+    "react-mixin": "^5.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.0.9",
+    "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -33,6 +36,7 @@
     "jest": "^24.7.1",
     "jest-expo": "^32.0.0",
     "moment": "^2.24.0",
+    "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
     "typescript": "^3.4.1"
   },
