Adds android version code for initial release

--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
       "package": "com.jimtoth.smokeless"
     },
     "hooks": {
