--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "buildandroidapk": "expo build:android -t apk"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
     "@types/react-mixin": "^2.0.32",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9",
+    "expo": "^34.0.1",
+    "expo-ads-admob": "^6.0.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.1.0",
+    "react-navigation": "^3.11.1",
     "rn-sliding-up-panel": "^2.3.1",
     "sentry-expo": "^1.13.0"
   },
