--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-mixin": "^2.0.32",
     "expo": "^34.0.1",
     "expo-ads-admob": "^6.0.0",
+    "expo-constants": "^6.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
