--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.5",
     "react": "16.8.6",
     "react-native": "0.60.5"
   },
