--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.5",
+    "expo-font": "^6.0.1",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^3.11.1",
+    "rn-sliding-up-panel": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
