--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "SmokeLess",
+  "name": "smoke-less",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "android": "react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.5",
-    "expo-font": "^6.0.1",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.3.0",
@@ -34,5 +33,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
