--- a/ios/SmokeLess/Info.plist
+++ b/ios/SmokeLess/Info.plist
@@ -57,6 +57,7 @@
 	<array>
 		<string>Saira-Bold.ttf</string>
 		<string>Saira-Regular.ttf</string>
+		<string>Ionicons.ttf</string>
 	</array>
 </dict>
 </plist>
