--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/slider": "^2.0.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-admob": "^2.0.0-beta.5",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-ionicons": "^4.6.1",
     "react-native-reanimated": "^1.2.0",
