--- a/android/app/bin/build.gradle
+++ b/android/app/bin/build.gradle
@@ -128,7 +128,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.smokeless"
+        applicationId "com.kelmoria.smokeless"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
