--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: "com.android.application"
 
+project.ext.envConfigFiles = [
+    debug: ".env",
+    release: ".env.production",
+    staging: ".env.staging",
+]
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 import com.android.build.OutputFile
 
 /**
@@ -150,12 +157,10 @@ android {
             keyPassword 'android'
         }
         release {
-            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword MYAPP_UPLOAD_STORE_PASSWORD
-                keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
-            }
+            storeFile file(project.env.get('APP_RELEASE_STORE_FILE'))
+            storePassword project.env.get('APP_RELEASE_STORE_PASSWORD')
+            keyAlias project.env.get('APP_RELEASE_KEY_ALIAS')
+            keyPassword project.env.get('APP_RELEASE_KEY_PASSWORD')
         }
     }
     buildTypes {
