--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
+    "build:android:staging": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease",
+    "build:android:production": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -14,6 +16,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-admob": "^2.0.0-beta.5",
+    "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-ionicons": "^4.6.1",
     "react-native-reanimated": "^1.2.0",
