--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,10 +157,12 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file(project.env.get('APP_RELEASE_STORE_FILE'))
-            storePassword project.env.get('APP_RELEASE_STORE_PASSWORD')
-            keyAlias project.env.get('APP_RELEASE_KEY_ALIAS')
-            keyPassword project.env.get('APP_RELEASE_KEY_PASSWORD')
+            if (project.env.get('APP_RELEASE_STORE_FILE') != null && file(project.env.get('APP_RELEASE_STORE_FILE')).exists()) {
+                storeFile file(project.env.get('APP_RELEASE_STORE_FILE'))
+                storePassword project.env.get('APP_RELEASE_STORE_PASSWORD')
+                keyAlias project.env.get('APP_RELEASE_KEY_ALIAS')
+                keyPassword project.env.get('APP_RELEASE_KEY_PASSWORD')
+            }
         }
     }
     buildTypes {
