--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DEV=true
 ENABLE_ADS=false
 USE_TEST_ADS=true
 ADMOB_AFTER_SMOKE_ID=ca-app-pub-3940256099942544/1033173712
+SENTRY_URL=https://92e853601ecc4e2abbadb2d8732b85a3@sentry.io/1532012
