--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ DEV=false
 ENABLE_ADS=true
 USE_TEST_ADS=false
 ADMOB_AFTER_SMOKE_ID=ca-app-pub-5329539233531847/9594334162
+SENTRY_URL=https://92e853601ecc4e2abbadb2d8732b85a3@sentry.io/1532012
