--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-ionicons": "^4.6.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-sentry": "^0.43.2",
     "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.11.1",
     "rn-sliding-up-panel": "^2.3.1"
