--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
+    "clean:android": "cd android && gradlew clean",
+    "bundle:android:debug": "react-native bundle --dev false --platform android --entry-file index.js  --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "build:android:debug": "cd android && gradlew assembleDebug",
     "build:android": "cd android && gradlew assembleRelease",
     "build:android:staging": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease",
     "build:android:production": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
