--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,13 @@ build/
 .gradle
 local.properties
 *.iml
+android/app/src/main/assets/index.android.bundle
+android/app/src/main/res/drawable-hdpi/
+android/app/src/main/res/drawable-mdpi/
+android/app/src/main/res/drawable-xhdpi/
+android/app/src/main/res/drawable-xxhdpi/
+android/app/src/main/res/drawable-xxxhdpi/node_modules_reactnavigationstack_lib_module_views_assets_backicon.png
+android/app/src/main/res/raw/
 
 # Visual Studio Code
 #
