Keep ads disabled in development

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEV=true
-ENABLE_ADS=true
+ENABLE_ADS=FALSE
 USE_TEST_ADS=true
 ADMOB_AFTER_SMOKE_ID=ca-app-pub-3940256099942544/1033173712
 SENTRY_URL=https://92e853601ecc4e2abbadb2d8732b85a3@sentry.io/1532012
