--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ build/
 .gradle
 local.properties
 *.iml
+
+# Add these for now, may need to remove
 android/app/src/main/assets/index.android.bundle
 android/app/src/main/res/drawable-hdpi/
 android/app/src/main/res/drawable-mdpi/
